benswork/UARProject/force-app/main/default/objects/App_Role__c/App_Role__c.object-meta.xml
<CustomObject>
    <label>App Role</label>
    <nameField>
        <label>AppRole Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>App Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>