benswork/UARProject/force-app/main/default/objects/App_Role__c/fields/App__c.field-meta.xml
<CustomField>
    <fullName>App__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>App</label>
    <referenceTo>Apps__c</referenceTo>
    <relationshipLabel>App Roles</relationshipLabel>
    <relationshipName>App_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>