benswork/UARProject/force-app/main/default/objects/App_Role__c/fields/Helptext__c.field-meta.xml
<CustomField>
    <fullName>Helptext__c</fullName>
    <label>Helptext</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>